--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Accordion",
+  "name": "accordion",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "OUALI Aghiles",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -16,11 +16,13 @@
     "babel-preset-stage-2": "^6.24.1",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
+    "docdash": "^1.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
@@ -34,10 +36,12 @@
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
     "imagemin": "^7.0.1",
+    "jsdoc": "^3.6.3",
     "postcss-import": "^12.0.1"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "standard": "^14.3.1",
     "tailwindcss": "^1.1.4"
   }
 }
